Fix chat friends drawer on mobile

--- a/public/chat.html
+++ b/public/chat.html
@@ -57,11 +57,9 @@
             <!-- item 1 -->
             <div class="message">
               <div class="message__avatar-wrapper">
-                <img
-                  src="./images/profile.jpg"
-                  alt=""
-                  class="message__avatar"
-                />
+                <div class="message__avatar">
+                  <span class="message__avatar-name">J</span>
+                </div>
               </div>
               <div class="message__message-buble">
                 <p class="message__text">
@@ -70,11 +68,12 @@
                 </p>
               </div>
             </div>
-
             <!-- item 2 -->
             <div class="message message--right">
               <div class="message__avatar-wrapper">
-                <img src="./images/user01.jpg" alt="" class="message__avatar" />
+                <div class="message__avatar">
+                  <span class="message__avatar-name">F1</span>
+                </div>
               </div>
               <div class="message__message-buble">
                 <p class="message__text">
@@ -87,11 +86,9 @@
             <!-- item 3 -->
             <div class="message">
               <div class="message__avatar-wrapper">
-                <img
-                  src="./images/profile.jpg"
-                  alt=""
-                  class="message__avatar"
-                />
+                <div class="message__avatar">
+                  <span class="message__avatar-name">J</span>
+                </div>
               </div>
               <div class="message__message-buble">
                 <p class="message__text">
@@ -100,11 +97,12 @@
                 </p>
               </div>
             </div>
-
             <!-- item 4 -->
             <div class="message message--right">
               <div class="message__avatar-wrapper">
-                <img src="./images/user01.jpg" alt="" class="message__avatar" />
+                <div class="message__avatar">
+                  <span class="message__avatar-name">F1</span>
+                </div>
               </div>
               <div class="message__message-buble">
                 <p class="message__text">
@@ -117,11 +115,9 @@
             <!-- item 5 -->
             <div class="message">
               <div class="message__avatar-wrapper">
-                <img
-                  src="./images/profile.jpg"
-                  alt=""
-                  class="message__avatar"
-                />
+                <div class="message__avatar">
+                  <span class="message__avatar-name">J</span>
+                </div>
               </div>
               <div class="message__message-buble">
                 <p class="message__text">
@@ -130,11 +126,12 @@
                 </p>
               </div>
             </div>
-
             <!-- item 6 -->
             <div class="message message--right">
               <div class="message__avatar-wrapper">
-                <img src="./images/user01.jpg" alt="" class="message__avatar" />
+                <div class="message__avatar">
+                  <span class="message__avatar-name">F1</span>
+                </div>
               </div>
               <div class="message__message-buble">
                 <p class="message__text">
@@ -171,7 +168,7 @@
           </button>
         </form>
       </section>
-      <aside class="chat-page__friends">
+      <aside class="chat-page__friends chat-page__friends--open">
         <div class="chat-page__chat-friends">
           <h2 class="chat-page__subtitle subtitle">Friends List</h2>
           <div class="chat-page__friends-list">
@@ -235,50 +232,75 @@
                 </div>
                 <span class="chat-friend__name">Friend 4</span>
               </div>
-
-              <!-- item 5 -->
+              <!-- item 4 -->
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
                     <img
-                      src="./images/user05.jpg"
+                      src="./images/user04.jpg"
                       alt=""
                       class="chat-friend__avatar"
                     />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 5</span>
+                <span class="chat-friend__name">Friend 4</span>
               </div>
-
-              <!-- item 6 -->
+              <!-- item 4 -->
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
                     <img
-                      src="./images/user06.jpg"
+                      src="./images/user04.jpg"
                       alt=""
                       class="chat-friend__avatar"
                     />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 6</span>
+                <span class="chat-friend__name">Friend 4</span>
               </div>
-
-              <!-- item 7 -->
+              <!-- item 4 -->
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
                     <img
-                      src="./images/user07.jpg"
+                      src="./images/user04.jpg"
                       alt=""
                       class="chat-friend__avatar"
                     />
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 7</span>
+                <span class="chat-friend__name">Friend 4</span>
+              </div>
+              <!-- item 4 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user04.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
+                </div>
+                <span class="chat-friend__name">Friend 4</span>
+              </div>
+              <!-- item 4 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user04.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
+                </div>
+                <span class="chat-friend__name">Friend 4</span>
               </div>
             </div>
           </div>
