Set offline status to chat friends

--- a/public/chat.html
+++ b/public/chat.html
@@ -168,7 +168,7 @@
           </button>
         </form>
       </section>
-      <aside class="chat-page__friends chat-page__friends--open">
+      <aside class="chat-page__friends">
         <div class="chat-page__chat-friends">
           <h2 class="chat-page__subtitle subtitle">Friends List</h2>
           <div class="chat-page__friends-list">
@@ -177,11 +177,9 @@
               <div class="chat-friend chat-friend--active">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user01.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F1</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
@@ -189,14 +187,12 @@
               </div>
 
               <!-- item 2 -->
-              <div class="chat-friend">
+              <div class="chat-friend chat-friend--offline">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user02.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F2</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
@@ -207,11 +203,9 @@
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user03.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F3</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
@@ -222,85 +216,78 @@
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user04.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F4</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
                 <span class="chat-friend__name">Friend 4</span>
               </div>
-              <!-- item 4 -->
+
+              <!-- item 5 -->
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user04.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F5</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 4</span>
+                <span class="chat-friend__name">Friend 5</span>
               </div>
-              <!-- item 4 -->
-              <div class="chat-friend">
+
+              <!-- item 6 -->
+              <div class="chat-friend chat-friend--offline">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user04.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F6</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 4</span>
+                <span class="chat-friend__name">Friend 6</span>
               </div>
-              <!-- item 4 -->
+
+              <!-- item 7 -->
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user04.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F7</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 4</span>
+                <span class="chat-friend__name">Friend 7</span>
               </div>
-              <!-- item 4 -->
-              <div class="chat-friend">
+
+              <!-- item 8 -->
+              <div class="chat-friend chat-friend--offline">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user04.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F8</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 4</span>
+                <span class="chat-friend__name">Friend 8</span>
               </div>
-              <!-- item 4 -->
+
+              <!-- item 9 -->
               <div class="chat-friend">
                 <div class="chat-friend__avatar-status">
                   <div class="chat-friend__avatar-wrapper">
-                    <img
-                      src="./images/user04.jpg"
-                      alt=""
-                      class="chat-friend__avatar"
-                    />
+                    <div class="chat-friend__avatar">
+                      <span class="chat-friend__avatar-name">F9</span>
+                    </div>
                     <span class="chat-friend__status"></span>
                   </div>
                 </div>
-                <span class="chat-friend__name">Friend 4</span>
+                <span class="chat-friend__name">Friend 9</span>
               </div>
             </div>
           </div>
