Hide menu button on large tablet

--- a/public/chat.html
+++ b/public/chat.html
@@ -27,7 +27,7 @@
       </div>
 
       <!-- logo -->
-      <div class="appbar__section appbar__section--margin">
+      <div class="appbar__section appbar__section--logo">
         <a class="logo" href="home.html"
           ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
         </a>
