Add menu button animation

--- a/public/chat.html
+++ b/public/chat.html
@@ -47,6 +47,8 @@
           </div>
         </div>
       </div>
+      <!-- appbar__scrim -->
+      <div class="appbar__scrim"></div>
     </header>
 
     <!-- main -->
@@ -297,7 +299,6 @@
           </div>
         </div>
       </aside>
-      <div class="scrim"></div>
     </main>
 
     <!-- footer -->
