Set remove icon to friendslist items

--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -95,7 +95,11 @@
             </div>
             <span class="friends__name">Friend 3</span>
             <button class="btn btn--40 btn--rounded">
-              <img class="btn__icon" src="./images/add_white_24dp.svg" alt="" />
+              <img
+                class="btn__icon"
+                src="./images/remove_white_24dp.svg"
+                alt=""
+              />
             </button>
           </div>
 
@@ -121,7 +125,11 @@
             </div>
             <span class="friends__name">Friend 5</span>
             <button class="btn btn--40 btn--rounded">
-              <img class="btn__icon" src="./images/add_white_24dp.svg" alt="" />
+              <img
+                class="btn__icon"
+                src="./images/remove_white_24dp.svg"
+                alt=""
+              />
             </button>
           </div>
         </div>
