Style friends items

--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -87,7 +87,7 @@
           </div>
 
           <!-- item 3 -->
-          <div class="friends__item">
+          <div class="friends__item friends__item--friend">
             <div class="friends__avatar">
               <div class="friends__img">
                 <span class="friends__img-name">F3</span>
@@ -117,7 +117,7 @@
           </div>
 
           <!-- item 5 -->
-          <div class="friends__item">
+          <div class="friends__item friends__item--friend">
             <div class="friends__avatar">
               <div class="friends__img">
                 <span class="friends__img-name">F5</span>
