disable profile email

--- a/public/profile.html
+++ b/public/profile.html
@@ -57,6 +57,7 @@
               id="email"
               type="text"
               name="email"
+              disabled
             />
           </div>
 
