Create login error messages

--- a/public/login.html
+++ b/public/login.html
@@ -33,6 +33,7 @@
               type="text"
               name="email"
             />
+            <p class="form__error form__error--email">Email is invalid</p>
           </div>
 
           <div class="form__section">
@@ -43,6 +44,7 @@
               type="password"
               name="password"
             />
+            <p class="form__error form__error--password">Password is invalid</p>
           </div>
 
           <div class="form__section">
