--- a/public/register.html
+++ b/public/register.html
@@ -28,6 +28,7 @@
               type="text"
               name="username"
             />
+            <p class="form__error form__error--username">Username is invalid</p>
           </div>
 
           <div class="form__section">
@@ -38,6 +39,7 @@
               type="text"
               name="email"
             />
+            <p class="form__error form__error--email">Email is invalid</p>
           </div>
 
           <div class="form__section">
@@ -48,6 +50,7 @@
               type="password"
               name="password"
             />
+            <p class="form__error form__error--password">Password is invalid</p>
           </div>
 
           <div class="form__section">
@@ -58,6 +61,9 @@
               type="password"
               name="passwordConfirm"
             />
+            <p class="form__error form__error--passwordConfirm">
+              password Confirmation is invalid
+            </p>
           </div>
 
           <div class="form__section">
