--- a/public/profile.html
+++ b/public/profile.html
@@ -48,6 +48,7 @@
               type="text"
               name="username"
             />
+            <p class="form__error form__error--username">Username is invalid</p>
           </div>
 
           <div class="form__section">
@@ -69,6 +70,7 @@
               type="password"
               name="password"
             />
+            <p class="form__error form__error--password">Password is invalid</p>
           </div>
 
           <div class="form__section">
@@ -79,6 +81,9 @@
               type="password"
               name="passwordConfirm"
             />
+            <p class="form__error form__error--passwordConfirm">
+              password Confirmation is invalid
+            </p>
           </div>
 
           <div class="form__section">
@@ -86,6 +91,9 @@
               <button class="btn" type="submit">Update</button>
               <button class="btn" type="submit">Remove</button>
             </div>
+          </div>
+          <div class="form__section">
+            <p class="form__message">Update Successful</p>
           </div>
         </form>
       </section>
